--- a/i18n/localized.en.yaml
+++ b/i18n/localized.en.yaml
@@ -447,3 +447,23 @@
   value: Keyword or ID
   description: A string for the placeholder of problem search input.
   raw: Keyword or ID
+
+- name: PROBLEM_DESCRIPTION_LABEL
+  value: Description
+  description: A string for the label of problem description.
+  raw: Description
+
+- name: PROBLEM_INPUT_FORMAT_LABEL
+  value: Input Format
+  description: A string for the label of problem input format.
+  raw: Input Format
+
+- name: PROBLEM_OUTPUT_FORMAT_LABEL
+  value: Output Format
+  description: A string for the label of problem output format.
+  raw: Output Format
+
+- name: PROBLEM_LIMIT_AND_HINT_LABEL
+  value: Limit and Hint
+  description: A string for the label of problem limit and hint.
+  raw: Limit and Hint
