--- a/i18n/localized.zh-cn.yaml
+++ b/i18n/localized.zh-cn.yaml
@@ -447,3 +447,23 @@
   value: 输入题目 ID 或关键字以搜索题目
   description: A string for the placeholder of problem search input.
   raw: Keyword or ID
+
+- name: PROBLEM_DESCRIPTION_LABEL
+  value: null
+  description: A string for the label of problem description.
+  raw: Description
+
+- name: PROBLEM_INPUT_FORMAT_LABEL
+  value: null
+  description: A string for the label of problem input format.
+  raw: Input Format
+
+- name: PROBLEM_OUTPUT_FORMAT_LABEL
+  value: null
+  description: A string for the label of problem output format.
+  raw: Output Format
+
+- name: PROBLEM_LIMIT_AND_HINT_LABEL
+  value: null
+  description: A string for the label of problem limit and hint.
+  raw: Limit and Hint
