--- a/i18n/raw.yaml
+++ b/i18n/raw.yaml
@@ -368,3 +368,27 @@
 - name: PROBLEM_LIMIT_AND_HINT_LABEL
   value: Limit and Hint
   description: A string for the label of problem limit and hint.
+
+- name: PROBLEM_SAMPLES_LABEL
+  value: Samples
+  description: A string for the label of problem samples.
+
+- name: PROBLEM_SAMPLE_ITEM_LABEL
+  value: Sample {0}
+  description: A string for the label of problem sample item. {0} is the sample number.
+
+- name: PROBLEM_SAMPLE_INPUT_LABEL
+  value: Input
+  description: A string for the label of problem sample input.
+
+- name: PROBLEM_SAMPLE_OUTPUT_LABEL
+  value: Output
+  description: A string for the label of problem sample output.
+
+- name: PROBLEM_SAMPLE_EXPLANATION_LABEL
+  value: Explanation
+  description: A string for the label of problem sample explanation.
+
+- name: PROBLEM_TAGS_LABEL
+  value: Tags
+  description: A string for the label of problem tags.
