--- a/i18n/localized.zh-cn.yaml
+++ b/i18n/localized.zh-cn.yaml
@@ -449,21 +449,51 @@
   raw: Keyword or ID
 
 - name: PROBLEM_DESCRIPTION_LABEL
-  value: null
+  value: 题目描述
   description: A string for the label of problem description.
   raw: Description
 
 - name: PROBLEM_INPUT_FORMAT_LABEL
-  value: null
+  value: 输入格式
   description: A string for the label of problem input format.
   raw: Input Format
 
 - name: PROBLEM_OUTPUT_FORMAT_LABEL
-  value: null
+  value: 输出格式
   description: A string for the label of problem output format.
   raw: Output Format
 
 - name: PROBLEM_LIMIT_AND_HINT_LABEL
-  value: null
+  value: 限制和提示
   description: A string for the label of problem limit and hint.
   raw: Limit and Hint
+
+- name: PROBLEM_SAMPLES_LABEL
+  value: null
+  description: A string for the label of problem samples.
+  raw: Samples
+
+- name: PROBLEM_SAMPLE_ITEM_LABEL
+  value: null
+  description: A string for the label of problem sample item. {0} is the sample number.
+  raw: Sample {0}
+
+- name: PROBLEM_SAMPLE_INPUT_LABEL
+  value: null
+  description: A string for the label of problem sample input.
+  raw: Input
+
+- name: PROBLEM_SAMPLE_OUTPUT_LABEL
+  value: null
+  description: A string for the label of problem sample output.
+  raw: Output
+
+- name: PROBLEM_SAMPLE_EXPLANATION_LABEL
+  value: null
+  description: A string for the label of problem sample explanation.
+  raw: Explanation
+
+- name: PROBLEM_TAGS_LABEL
+  value: null
+  description: A string for the label of problem tags.
+  raw: Tags
