--- a/i18n/localized.zh-cn.yaml
+++ b/i18n/localized.zh-cn.yaml
@@ -48,6 +48,11 @@
   description: A string for the label of search button.
   raw: Search
 
+- name: COMMON_COPY_BUTTON
+  value: null
+  description: A string for the label of copy button.
+  raw: Copy
+
 - name: COMMON_ERROR_TITLE
   value: 错误
   description: A string for the title of error message.
@@ -507,3 +512,13 @@
   value: 隐藏题目标签
   description: A string for the label of hide tags button.
   raw: Hide problem tags
+
+- name: CODE_COPIED_MESSAGE
+  value: null
+  description: A string for the message when code is copied to clipboard.
+  raw: The code is copied to the clipboard.
+
+- name: CODE_COPY_FAILED_MESSAGE
+  value: null
+  description: A string for the message when failed to copy code to clipboard.
+  raw: Failed to copy the code to the clipboard.
