--- a/i18n/raw.yaml
+++ b/i18n/raw.yaml
@@ -405,6 +405,10 @@
   value: Hide problem tags
   description: A string for the label of hide tags button.
 
+- name: NO_TAGS_TEXT
+  value: No tags.
+  description: A string for the text when there are no tags.
+
 - name: CODE_COPIED_MESSAGE
   value: The code is copied to the clipboard.
   description: A string for the message when code is copied to clipboard.
