--- a/i18n/localized.zh-cn.yaml
+++ b/i18n/localized.zh-cn.yaml
@@ -624,29 +624,29 @@
   raw: GNU C++20
 
 - name: COMPILATION_CPP_OPTIMIZATION_O0
-  value: -O0 (禁用优化)
+  value: '-O0 (禁用优化)'
   description: A string for the label of O0 optimization.
-  raw: "-O0 (disable optimization)"
+  raw: '-O0 (disable optimization)'
 
 - name: COMPILATION_CPP_OPTIMIZATION_O1
-  value: -O1
+  value: '-O1'
   description: A string for the label of O1 optimization.
-  raw: "-O1"
+  raw: '-O1'
 
 - name: COMPILATION_CPP_OPTIMIZATION_O2
-  value: -O2
+  value: '-O2'
   description: A string for the label of O2 optimization.
-  raw: "-O2"
+  raw: '-O2'
 
 - name: COMPILATION_CPP_OPTIMIZATION_O3
-  value: -O3
+  value: '-O3'
   description: A string for the label of O3 optimization.
-  raw: "-O3"
+  raw: '-O3'
 
 - name: COMPILATION_CPP_OPTIMIZATION_OFAST
-  value: -Ofast (最快)
+  value: '-Ofast (最快)'
   description: A string for the label of Ofast optimization.
-  raw: "-Ofast (fastest)"
+  raw: '-Ofast (fastest)'
 
 - name: COMPILATION_CPP_ARCHITECTURE_64
   value: 64 位
@@ -719,14 +719,14 @@
   raw: JVM
 
 - name: COMPILATION_PAS_OPTIMIZATION_O
-  value: -O
+  value: '-O'
   description: A string for the label of O optimization.
-  raw: "-O"
+  raw: '-O'
 
 - name: COMPILATION_PAS_OPTIMIZATION_O4
-  value: -O4 (最快)
+  value: '-O4 (最快)'
   description: A string for the label of O4 optimization.
-  raw: "-O4 (fastest)"
+  raw: '-O4 (fastest)'
 
 - name: COMPILATION_RS_OPTIMIZATION_1
   value: 1 级
