--- a/i18n/raw.yaml
+++ b/i18n/raw.yaml
@@ -42,6 +42,18 @@
   value: Copy
   description: A string for the label of copy button.
 
+- name: COMMON_PREVIEW_BUTTON
+  value: Preview
+  description: A string for the label of preview button.
+
+- name: COMMON_MOVE_UP_BUTTON
+  value: Move Up
+  description: A string for the label of move up button.
+
+- name: COMMON_MOVE_DOWN_BUTTON
+  value: Move Down
+  description: A string for the label of move down button.
+
 - name: COMMON_ERROR_TITLE
   value: Error
   description: A string for the title of error message.
@@ -149,6 +161,10 @@
 - name: NAVIGATION_PROBLEMS
   value: Problems
   description: A string for the label of problems navigation.
+
+- name: NAVIGATION_PROBLEM_NEW
+  value: New Problem
+  description: A string for the label of new problem navigation.
 
 - name: NAVIGATION_PROBLEM_SETS
   value: Problem Sets
@@ -411,6 +427,10 @@
 - name: NO_TAGS_TEXT
   value: No tags.
   description: A string for the text when there are no tags.
+
+- name: PROBLEM_ADD_SAMPLE_BUTTON
+  value: Add Sample
+  description: A string for the label of add sample button.
 
 - name: CODE_COPIED_MESSAGE
   value: The code is copied to the clipboard.
